--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,30 @@
 
     <groupId>com.hectorbarrios</groupId>
     <artifactId>hbr-esc-pos-printer</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
+    <name>HBR - ESC/POS Printer</name>
 
-    
+    <packaging>jar</packaging>
+
+    <properties>
+        <!-- Enable Java 8 -->
+        <java.version>1.8</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
 </project>
